--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,6 @@ It long just to have make the body of this screen properly.</string>
     <string name="toolbar_search">search</string>
 
     <string name="title_activity_edit">where are you?</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
