--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@ It long just to have make the body of this screen properly.</string>
     <string name="edit_address">address</string>
     <string name="edit_city">city</string>
     <string name="edit_country">country</string>
-    <string name="edit_postal">Postal Code</string>
+    <string name="edit_agent">agent name</string>
     <string name="edit_apartment">apartment</string>
     <string name="edit_finish">Finish</string>
     <string name="edit_edition">Real Estate Edition</string>
