--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@ It long just to have make the body of this screen properly.</string>
         \n NL 00000 \n nowhereland</string>
     <string name="fragment_price">Price</string>
     <string name="fragment_price_base">0$</string>
-    <string name="fragment_date_entree_title">Date Creation</string>
+    <string name="fragment_date_entree_title">Creation Date</string>
     <string name="fragment_date_entree_base">unknown</string>
     <string name="fragment_date_vente_title">Sold Date</string>
     <string name="fragment_date_vente_base">unknown</string>
